LESS and CSS up.

--- a/web/themes/coopernet/less/less/header.less
+++ b/web/themes/coopernet/less/less/header.less
@@ -280,7 +280,7 @@ ul.menu {
     }
   }
 }
-@mobile{
+@media screen and (max-width: @screen-sm) {
   .dropdown-menu {
     position: static !important;
     display: block !important;
@@ -289,6 +289,7 @@ ul.menu {
     }
   }
 }
+
 
 /* Fin menu ***********************************************************************************************************/
 .container.container-coopernet-top{
