--- a/web/themes/coopernet/less/less/article.less
+++ b/web/themes/coopernet/less/less/article.less
@@ -1,12 +1,12 @@
-pre{
+pre {
   padding: 1em;
-  margin: .5em 0;
+  margin: 0.5em 0;
   overflow: auto;
   border-radius: 0.3em;
   color: #f8f8f2;
   background: #272822;
-  text-shadow: 0 1px rgba(0,0,0,0.3);
-  font-family: Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   direction: ltr;
   text-align: left;
   white-space: pre;
@@ -20,4 +20,57 @@ pre{
   -webkit-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
+}
+/* Teaser */
+.path-cartes {
+  #edit-uid {
+    width: 150px;
+  }
+  .view-content {
+    display: flex !important;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .views-row {
+      background-color: #6c757d;
+      border-radius: 8px;
+      color: white;
+
+      margin-bottom: 20px;
+      @media screen and (min-width: @screen-lg) {
+        width: 22% !important;
+      }
+      @media screen and (max-width: @screen-lg) and (min-width: @screen-sm) {
+        width: 48% !important;
+      }
+      @media screen and (max-width: @screen-sm) {
+        width: 98% !important;
+      }
+      article {
+        &.carte {
+          padding: 20px;
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          a {
+            color: white;
+          }
+          h2 {
+            flex-grow: 0;
+          }
+          div.content {
+            flex-grow: 1;
+            color: #6c757d;
+            transition-delay: 500ms;
+            border: thin dotted white;
+            border-radius: 6px;
+            padding: 5px;
+            &:hover {
+              color: white;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+  }
 }
