book tree added.

--- a/web/themes/coopernet/less/less/training.less
+++ b/web/themes/coopernet/less/less/training.less
@@ -25,3 +25,14 @@
 
   }
 }
+.block-book-navigation {
+  nav li {
+    display: none;
+    &.expanded {
+      display: block;
+      li{
+        display: block;
+      }
+    }
+  }
+}
