--- a/web/themes/coopernet/less/less/training.less
+++ b/web/themes/coopernet/less/less/training.less
@@ -26,12 +26,17 @@
   }
 }
 .block-book-navigation {
-  nav li {
-    display: none;
-    &.expanded {
-      display: block;
-      li{
-        display: block;
+  nav {
+    ul {
+      padding-left: 0;
+      li {
+        display: none;
+        &.expanded {
+          display: block;
+          li{
+            display: block;
+          }
+        }
       }
     }
   }
