--- a/web/themes/coopernet/less/less/training.less
+++ b/web/themes/coopernet/less/less/training.less
@@ -41,3 +41,24 @@
     }
   }
 }
+.navigation-book {
+  ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    li {
+      a {
+        b {
+          font-size: 3em;
+          position: relative;
+          top: 6px;
+          color: #EC5D6F;
+        }
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+    
+  }
+}
