--- a/web/themes/coopernet/less/less/training.less
+++ b/web/themes/coopernet/less/less/training.less
@@ -45,7 +45,9 @@
   ul {
     list-style: none;
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
+    padding: 0;
     li {
       a {
         b {
