--- a/web/themes/coopernet/less/templates/book-navigation.html.twig
+++ b/web/themes/coopernet/less/templates/book-navigation.html.twig
@@ -44,7 +44,7 @@
       {% endif %}
       {% if parent_url %}
         <li>
-          <a href="{{ parent_url }}" title="{{ 'Go to parent page'|t }}">{{ 'Up'|t }}</a>
+          <a class="navigation-book-top" href="{{ parent_url }}" title="{{ 'Go to parent page'|t }}">{{ 'Up'|t }}</a>
         </li>
       {% endif %}
       {% if next_url %}
