nav formation améliorée.

--- a/web/themes/coopernet/less/css/style.css
+++ b/web/themes/coopernet/less/css/style.css
@@ -8812,9 +8812,19 @@ div.content > .field--name-body ol li:before {
 .navigation-book ul {
   list-style: none;
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0;
+  margin: 20px 0 0 0;
+}
+.navigation-book ul li {
+  margin: 0;
+  flex-basis: 33.33%;
+}
+.navigation-book ul li:nth-child(2) {
+  text-align: center;
+}
+.navigation-book ul li:nth-child(3) {
+  text-align: right;
 }
 .navigation-book ul li a b {
   font-size: 3em;
@@ -8859,6 +8869,32 @@ div.content > .field--name-body ol li:before {
   font-style: normal;
   font-weight: normal;
   color: #EC5D6F;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: 10px;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\e80B";
+  font-size: 1em;
+}
+#go-top {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+#go-top a:after {
+  position: absolute;
+  top: -10px;
+  left: 49.8%;
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  color: #ACCE27;
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
