--- a/web/themes/coopernet/less/less/header.less
+++ b/web/themes/coopernet/less/less/header.less
@@ -6,20 +6,25 @@
       }
     }
   }
+
   #logo-and-baseline {
     padding-top: 25px;
     padding-bottom: 20px;
     display: table;
-    @media screen and (max-width: @screen-phone){
+
+    @media screen and (max-width: @screen-phone) {
       display: block;
     }
+
     a.logo {
       display: table-cell;
-      @media screen and (max-width: @screen-phone){
+
+      @media screen and (max-width: @screen-phone) {
         display: table;
         margin: 0 auto;
       }
     }
+
     h1 {
       padding-left: 50px;
       position: relative;
@@ -27,21 +32,25 @@
       color: @vert-fonce-coopernet;
       font-size: 2em;
       display: table-cell;
-      @media screen and (max-width: @screen-phone){
+
+      @media screen and (max-width: @screen-phone) {
         display: block;
         font-size: 1.4em;
         text-align: center;
       }
     }
   }
+
   #block-bandeauaccueil {
     position: relative;
+
     .field--name-field-image {
-      > img {
+      >img {
         display: table;
         margin: 0 auto;
       }
     }
+
     .field--name-body {
       position: absolute;
       left: 55%;
@@ -54,11 +63,13 @@
       */
       font-size: 3em;
       color: white;
+
       @media (max-width: @screen-md) {
         top: 10px;
         left: 20%;
         font-size: 2em;
       }
+
       @media (max-width: @screen-xs) {
         top: 10px;
         left: 20%;
@@ -67,40 +78,52 @@
     }
   }
 }
+
 .top-menu {
   background-color: #2E2E2E;
-  .container{
+
+  .container {
     @media (max-width: @screen-sm) {
       margin: 0;
       padding: 0;
     }
   }
+
   .col-md-6 {
     @media (max-width: @screen-md) {
       padding: 0;
     }
   }
+
   ul.menu {
     display: table;
+
     @media (min-width: @screen-md) {
       float: right;
     }
 
     margin-right: 40px;
+
     li {
       display: table-cell;
-      > a {
+
+      >a {
         color: #FFF;
-        &:active, &:focus{
+
+        &:active,
+        &:focus {
           color: #000;
         }
+
         display: block;
+
         @media (max-width: @screen-sm) {
           padding: 10px 6px;
         }
       }
+
       &.first {
-        > a:before {
+        >a:before {
           @media (min-width: @screen-md) {
             .glyphicon();
             content: "\e809";
@@ -110,8 +133,10 @@
         }
       }
     }
-    li.active, li:hover {
-      > a {
+
+    li.active,
+    li:hover {
+      >a {
         color: #000;
         background-color: @bleu-clair-coopernet;
       }
@@ -121,43 +146,53 @@
 
 .region.region-navigation {
   margin-top: 20px;
+
   @media (max-width: @screen-md) {
     margin-top: 0;
   }
+
   .logo {
     margin-top: 20px;
+
     @media (max-width: @screen-md) {
-      > img {
+      >img {
         max-width: 90%;
       }
     }
   }
 }
 
-.menu-alone { /* Par défaut ***************************************************************************************/
+.menu-alone {
+  /* Par défaut ***************************************************************************************/
   margin-top: 20px;
+
   nav {
     clear: both;
-    @media screen and (min-width: @screen-sm) and (max-width: @screen-md){
+
+    @media screen and (min-width: @screen-sm) and (max-width: @screen-md) {
       padding-left: 0;
     }
 
     ul.menu {
-      > li:last-child{
-        a{
+      >li:last-child {
+        a {
           margin-right: 0 !important;
         }
 
       }
-      > li > ul > li a{
+
+      >li>ul>li a {
         display: block;
       }
+
       display: table;
       margin: 0 auto;
       float: none;
+
       @media @mobile {
         display: block;
       }
+
       li {
         a {
           color: #fff;
@@ -172,22 +207,25 @@
             padding: 15px 42px;
             margin-right: 30px;
           }
+
           @media screen and (max-width: @screen-lg) and (min-width: @screen-md) {
             padding: 15px 30px;
             margin-right: 35px;
           }
 
-          @media screen and (min-width: @screen-sm) and (max-width: @screen-md){
+          @media screen and (min-width: @screen-sm) and (max-width: @screen-md) {
             margin-right: 5px;
             font-size: 1.4em;
           }
+
           &.is-active {
             background-color: #000;
             color: white;
           }
         }
-        &.dropdown.active{
-          > a{
+
+        &.dropdown.active {
+          >a {
             background-color: #000;
             color: white;
           }
@@ -196,9 +234,11 @@
 
     }
   }
+
   @media @mobile {
     float: none;
     overflow: hidden;
+
     h1.navbar-text {
       font-size: 1.8em;
       width: 86%;
@@ -216,26 +256,34 @@
 /* Menu déroulant *****************************************************************************************************/
 
 ul.menu {
-  .open > a, .open > a:focus, .open > a:hover {
+
+  .open>a,
+  .open>a:focus,
+  .open>a:hover {
     background-color: black;
   }
-  .dropdown-menu{
+
+  .dropdown-menu {
     background-color: transparent !important;
   }
+
   .dropdown-submenu {
     position: relative;
-    > .dropdown-menu {
+
+    >.dropdown-menu {
       top: 0;
       left: 100%;
       padding: 0px;
     }
+
     &:hover {
-      > .dropdown-menu {
+      >.dropdown-menu {
         display: block;
       }
 
     }
-    > a:after {
+
+    >a:after {
       content: "\e080";
       display: inline-block;
       font-family: 'Glyphicons Halflings';
@@ -244,9 +292,11 @@ ul.menu {
       float: right;
       margin-top: 5px;
     }
+
     &.pull-left {
       float: none;
-      > .dropdown-menu {
+
+      >.dropdown-menu {
         left: -100%;
 
       }
@@ -254,37 +304,62 @@ ul.menu {
   }
 }
 
-.navbar-nav {
+@media (min-width: 768px) {
+  .navbar-header {
+    float: none;
+  }
+  
+}
+@media screen and (max-width: 1200px) and (min-width: 992px) {
+  li.expanded.dropdown > a {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
 
-  > li > .dropdown-menu {
+.navbar-nav {
+  display: flex !important;
+  justify-content: space-between;
+
+  >li {
+    float: none;
+  }
+
+  >li>.dropdown-menu {
     border: 0;
     -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     box-shadow: 0 !important;
   }
+
   li {
-    &:last-child > .dropdown-menu {
+    &:last-child>.dropdown-menu {
       left: auto;
       right: 0px;
+
       a {
         text-align: right !important;
       }
+
       .dropdown-submenu {
-        > a:after {
+        >a:after {
           float: left;
           content: "\e079";
         }
-        > .dropdown-menu {
+
+        >.dropdown-menu {
           left: -100%;
         }
       }
     }
   }
 }
+
 @media screen and (max-width: @screen-sm) {
   .dropdown-menu {
     position: static !important;
     display: block !important;
-    li{
+
+    li {
       display: block;
     }
   }
@@ -292,30 +367,37 @@ ul.menu {
 
 
 /* Fin menu ***********************************************************************************************************/
-.container.container-coopernet-top{
+.container.container-coopernet-top {
   padding: 0;
-  #navbar-collapse{
+
+  #navbar-collapse {
     padding: 0;
   }
 }
+
 @media screen and (min-width: @screen-lg) and (max-width: 1600px) {
+
   /* Media query : entre 1200 et 1600 px */
   .container.container-coopernet-top {
     .slogan-and-menu {
       background-image: none;
       width: auto;
+
       h1 {
         font-size: 2em;
       }
+
       ul.menu {
         li {
           margin-right: 15px;
+
           a {
             font-size: 1.6em;
             margin-right: 0;
             padding: 10px 10px;
           }
         }
+
         li:last-child {
           margin-right: 0;
         }
@@ -325,14 +407,17 @@ ul.menu {
 }
 
 @media screen and (min-width: @screen-md) and (max-width: @screen-lg) {
+
   /* Media query : entre 992 et 1200 px */
   .container.container-coopernet-top {
     .region.region-navigation {
       position: relative;
+
       .slogan-and-menu {
         background-image: none;
         width: auto;
         position: relative;
+
         h1 {
           position: absolute;
           margin-top: 0;
@@ -341,18 +426,22 @@ ul.menu {
           font-size: 2em;
           width: 400px;
         }
+
         ul.menu {
-          display: table;
+          /* display: table; */
           margin: 0 auto;
           margin-top: 80px;
+
           li {
             margin-right: 5px;
+
             a {
               font-size: 1.2em;
               margin-right: 0;
               padding: 10px 5px;
             }
           }
+
           li:last-child {
             margin-right: 0;
           }
@@ -364,16 +453,20 @@ ul.menu {
 }
 
 @media screen and (min-width: 768px) and (max-width: @screen-md) {
+
   /* Media query : entre 768 et 992 px */
   .container.container-coopernet-top {
     background-image: none;
+
     .region.region-navigation {
       position: relative;
+
       .slogan-and-menu {
         display: inline;
         background-image: none;
         width: auto;
         min-height: 0;
+
         h1 {
           font-size: 1.6em;
           position: absolute;
@@ -383,17 +476,21 @@ ul.menu {
           padding-left: 0;
           color: #000;
         }
+
         ul.menu {
           clear: both;
           margin-top: 17px;
+
           li {
             margin-right: 8px;
+
             a {
               font-size: 1.6em;
               margin-right: 0;
               padding: 10px 8px;
             }
           }
+
           li:last-child {
             margin-right: 0;
           }
@@ -405,6 +502,7 @@ ul.menu {
 }
 
 @media @mobile {
+
   /* media query : inférieur à 768 px*/
   .logo.pull-left {
     float: none !important;
@@ -415,6 +513,7 @@ ul.menu {
 
   .slogan-and-menu {
     background-image: none;
+
     h1 {
       display: table;
       margin: 0 auto;
@@ -422,6 +521,7 @@ ul.menu {
       color: black;
       font-size: 2em;
     }
+
     .navbar-nav {
       margin: 0;
     }
@@ -432,9 +532,11 @@ ul.menu {
 button.navbar-toggle {
   z-index: 99;
   margin-top: -150px;
+
   @media @mobile {
     margin-right: 0;
   }
+
   &:before {
     .glyphicon();
     content: "\e854";
@@ -442,5 +544,3 @@ button.navbar-toggle {
     color: black;
   }
 }
-
-
