--- a/web/themes/coopernet/less/less/header.less
+++ b/web/themes/coopernet/less/less/header.less
@@ -216,6 +216,7 @@
           @media screen and (min-width: @screen-sm) and (max-width: @screen-md) {
             margin-right: 5px;
             font-size: 1.4em;
+            white-space: nowrap;
           }
 
           &.is-active {
