LESS and CSS up.

--- a/web/themes/coopernet/less/css/style.css
+++ b/web/themes/coopernet/less/css/style.css
@@ -8285,6 +8285,7 @@ h3.home_slide_title a p {
   .menu-alone nav ul.menu li a {
     padding: 15px 30px;
     margin-right: 35px;
+    white-space: nowrap;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
