--- a/web/themes/coopernet/less/less/header.less
+++ b/web/themes/coopernet/less/less/header.less
@@ -211,6 +211,7 @@
           @media screen and (max-width: @screen-lg) and (min-width: @screen-md) {
             padding: 15px 30px;
             margin-right: 35px;
+            white-space: nowrap;
           }
 
           @media screen and (min-width: @screen-sm) and (max-width: @screen-md) {
