--- a/web/themes/coopernet/less/less/training.less
+++ b/web/themes/coopernet/less/less/training.less
@@ -25,7 +25,6 @@
         font-size: 1.2em;
       }
     }
-
   }
 }
 
@@ -55,13 +54,13 @@
     display: flex;
     justify-content: center;
     padding: 0;
-    
+
     margin: 20px 0 0 0;
     li {
-      &:nth-child(2){
+      &:nth-child(2) {
         text-align: center;
       }
-      &:nth-child(3){
+      &:nth-child(3) {
         text-align: right;
       }
       margin: 0;
@@ -71,7 +70,7 @@
           font-size: 3em;
           position: relative;
           top: 6px;
-          color: #EC5D6F;
+          color: #ec5d6f;
         }
 
         &:hover {
@@ -79,12 +78,11 @@
         }
       }
     }
-
   }
 }
 
 #block-navigationdulivre {
-  nav>ul>li>a {
+  nav > ul > li > a {
     font-size: 2em;
 
     &:before {
@@ -121,7 +119,7 @@
     font-family: "fontello";
     font-style: normal;
     font-weight: normal;
-    color: #EC5D6F;
+    color: #ec5d6f;
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
@@ -141,14 +139,13 @@
   justify-content: center;
   position: relative;
   a:after {
-
     position: absolute;
     top: -10px;
     left: 49.8%;
     font-family: "fontello";
     font-style: normal;
     font-weight: normal;
-    color: #ACCE27;
+    color: #acce27;
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
@@ -161,5 +158,17 @@
     -moz-osx-font-smoothing: grayscale;
     content: "\e80B";
     font-size: 1em;
+  }
+}
+
+/* zone de droite pour inciter à l'inscription */
+.page-node-131 {
+  @media (min-width: 768px) {
+    .col-sm-9 {
+      width: 58.33333333% !important;
+    }
+    .col-sm-3 {
+      width: 41.66666667% !important;
+    }
   }
 }
