--- a/web/themes/coopernet/less/less/training.less
+++ b/web/themes/coopernet/less/less/training.less
@@ -163,6 +163,9 @@
 
 /* zone de droite pour inciter à l'inscription */
 .page-node-131 {
+  h2.block-title {
+    margin-top: 120px;
+  }
   @media (min-width: 768px) {
     .col-sm-9 {
       width: 58.33333333% !important;
