requete sql avec user + title carte + nom colonne (a apprendre etc) fonctionnel

--- a/web/modules/custom/h5p_extension/templates/h5p-extension-page.html.twig
+++ b/web/modules/custom/h5p_extension/templates/h5p-extension-page.html.twig
@@ -108,3 +108,7 @@
 <div data-entry-groups='{{ allGroups|json_encode|replace("'", "&#39;")|raw }}'>
     test de l'envois de Data en Json
 </div>
+
+<form method="post">
+  <input type="submit" name="test" value="test">
+</form>
