--- a/web/modules/custom/h5p_extension/templates/h5p-extension-test.html.twig
+++ b/web/modules/custom/h5p_extension/templates/h5p-extension-test.html.twig
@@ -2,7 +2,7 @@
 
 <p>Je suis le currentUser {{ memo.userName }}</p>
 
-<h1>A apprendre</h1>
+<h1> {{ cardColonne }}</h1>
 <table>
   <thead>
     <tr>
@@ -11,61 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for item in memo.aApprendre %}
-    <tr>
-      <td> {{ item.cardTitle }}</td>
-      <td> {{ item.theme }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-
-<h1>Je sais un peu</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Titre de la carte</th>
-      <th>theme</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for item in memo.jeSaisUnPeu %}
-    <tr>
-      <td> {{ item.cardTitle }}</td>
-      <td> {{ item.theme }}</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
-
-<h1>Je sais bien</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Titre de la carte</th>
-      <th>theme</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for item in memo.jeSaisBien %}
-    <tr>
-      <td> {{ item.cardTitle }}</td>
-      <td> {{ item.theme }}</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
-
-<h1>Je sais parfaitment</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Titre de la carte</th>
-      <th>theme</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for item in memo.jeSaisParfaitement %}
+  {% for item in memo.selectedColumn %}
     <tr>
       <td> {{ item.cardTitle }}</td>
       <td> {{ item.theme }}</td>
