boucle selection colonne fonctionne

--- a/web/modules/custom/h5p_extension/templates/h5p-extension-test.html.twig
+++ b/web/modules/custom/h5p_extension/templates/h5p-extension-test.html.twig
@@ -1,8 +1,8 @@
 {{ attach_library('h5p_extension/h5p-extension-lib') }}
 
-<p>Je suis le currentUser {{ memo.userName }}</p>
+<p>Je suis le currentUser {{ userName }}</p>
 
-<h1> {{ cardColonne }}</h1>
+<h1> Colonne : {{ cardColonneTitle }}</h1>
 <table>
   <thead>
     <tr>
